@@ -1,0 +1,1 @@
+* 1,7,13,19 * * * cd; cd src/net_ftp_common/scripts; perl rsync.pl
