@@ -1,3 +1,9 @@
+2002-03-17  Terrence Brannon  <metaperl@localhost>
+
+	* added STDERR => $file hash constructor configuration option so
+	that debug output from Net::FTP(::Common)? can be saved to a
+	file. 
+
 2002-01-15  Terrence Brannon  <metaperl@localhost>
 
 	* v2.8 renamed dir() to ls() will add kevin evans implementation
